--- a/src/components/ClickGUI/Tab.astro
+++ b/src/components/ClickGUI/Tab.astro
@@ -59,14 +59,9 @@ const tabId = `${name}-tab`;
 		align-items: center;
 		transition: 0.25s ease-in-out;
 	}
-	.tab[data-open="true"] > .tab-header > .tab-open-indicator {
-		color: red;
-	}
-	.tab[data-open="false"] > .tab-header > .tab-open-indicator {
-		color: green;
-	}
 	.tab-open-indicator {
 		float: right;
+		margin-right: 5px;
 	}
 	@font-face {
 		font-family: "Gotham SSM Book";
