--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,9 +23,9 @@ import Raven from "/Raven.webp";
 				body="Check out the features we have without (ever) leaving your browser!"
 			/>
 			<Card
-				title="ClickGUI Demo"
-				href="/clickgui"
-				body="See our click GUI without leaving your browser!"
+				title="UI demo"
+				href="/ui"
+				body="See our UI without leaving your browser!"
 			/>
 			<Card
 				href="/discord"
@@ -60,7 +60,7 @@ import Raven from "/Raven.webp";
 		background-size: 400%;
 		background-position: 0%;
 	}
-	.instructions {
+	/* .instructions {
 		margin-bottom: 2rem;
 		border: 1px solid rgba(var(--accent-light), 25%);
 		background: linear-gradient(
@@ -80,7 +80,7 @@ import Raven from "/Raven.webp";
 	}
 	.instructions strong {
 		color: rgb(var(--accent-light));
-	}
+	} */
 	.link-card-grid {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
