--- a/src/components/ClickGUI/Settings/Slider.astro
+++ b/src/components/ClickGUI/Settings/Slider.astro
@@ -17,7 +17,6 @@ value = value < min ? min : value;
 <div
 	class="setting slider"
 	id={`slider-setting-${name}`}
-	data-toggled="false"
 	data-name={name}
 	data-value={defaultVal}
 >
@@ -39,7 +38,9 @@ value = value < min ? min : value;
 </div>
 
 <script>
-	const sliders = document.querySelectorAll(".slider");
+	const sliders = document.querySelectorAll(
+		".slider"
+	) as NodeListOf<HTMLDivElement>;
 	for (const slider of sliders) {
 		const inputSlider = slider.querySelector(
 			".input-slider"
@@ -51,13 +52,16 @@ value = value < min ? min : value;
 			const input = e.target! as HTMLInputElement;
 			slider.querySelector(".slider-info-holder > .slider-value")!.textContent =
 				input.value;
-			progressBar.value = input.valueAsNumber - parseInt(input.min);
+			slider.dataset.value = input.value;
+			progressBar.value = input.valueAsNumber;
 		});
 	}
 </script>
 <style>
 	.slider-info-holder > span {
 		color: white;
+		font-size: 15px;
+		font-family: "Gotham SSm Book";
 	}
 	.slider-info-holder > .slider-value {
 		float: right;
@@ -89,22 +93,13 @@ value = value < min ? min : value;
 		position: absolute;
 		top: 0;
 		left: 0;
+		width: 100%;
 		z-index: 2;
-		background: none;
-		/* background: #444; */
+		pointer-events: none;
+		background: rgba(175, 175, 175, 0.6);
 	}
 
 	.container {
 		position: relative;
-	}
-
-	.input-progress {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: 2;
-		pointer-events: none;
 	}
 </style>
