--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,10 @@
 ---
 interface Props {
 	title: string;
+	rainbow?: boolean;
 }
 
-const { title } = Astro.props;
+const { title, rainbow } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -15,6 +16,15 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/Raven.webp" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		{
+			rainbow ? (
+				<script type="module">
+					import init from "/utils/rainbow.mjs"; init()
+				</script>
+			) : (
+				""
+			)
+		}
 	</head>
 	<body>
 		<slot />
@@ -33,6 +43,12 @@ const { title } = Astro.props;
 		);
 		/* rainbow color (gets changed at runtime) */
 		--rainbow: #444;
+	}
+	.rainbow-color {
+		color: var(--rainbow);
+	}
+	.rainbow-background {
+		background: var(--rainbow);
 	}
 	html {
 		font-family: system-ui, sans-serif;
