--- a/src/components/ArrayList/ArraylistMod.astro
+++ b/src/components/ArrayList/ArraylistMod.astro
@@ -6,9 +6,6 @@ const { name } = Astro.props;
 ---
 
 <div id={`arraylist-module-${name}`} class="arraylist-module">
-    <span class="arraylist-module-name"></span>
-    <div class="arraylist-module-line"></div>
+	<span class="arraylist-module-name">{name}</span>
 </div>
-<style>
-    
-</style>
+<style></style>
